--- a/src/language/ru.json
+++ b/src/language/ru.json
@@ -1,3 +1,57 @@
 {
-  "hi": "приветь"
+  "header": {
+    "service": "Сервис",
+    "magazin": "Магазин",
+    "fix": "Конфигуратор",
+    "about": "О нас",
+    "contact": "Контакты"
+  },
+  "home": {
+    "hero": {
+      "1": "Полный комплекс сервисного обслуживания компьютерного оборудования.",
+      "2": "Онлайн магазина c широким ассортиментом компьютерных комплектующих и др.",
+      "3": "Продвинутый онлайн-сервис для модификации ПК"
+    },
+    "service": {
+      "title": "Почему мы лучше других?",
+      "ans": {
+        "1": "Специалисты с многолетним опытом",
+        "2": "Всё в указанное время – не заставляя вас ждать",
+        "3": "Гарантия и качество – оригинальный детали"
+      }
+    },
+    "steps": {
+      "title": "Этапы диагностики и ремонта",
+      "step": {
+        "1": "Определение неисправности ",
+        "2": "Согласования стоимости",
+        "3": "Ремонт устройства",
+        "4": "Уведомление о готовности",
+        "5": "Оплата",
+        "6": "Выдача готового устройства или доставка"
+      }
+    },
+    "review": "Отзывы"
+  },
+  "footer": {
+    "social": "Следите за нами в соц сетях",
+    "call": "Звонок"
+  },
+  "service": {
+    "help": "Мы поможем если у вас –",
+    "btn": "Заказать звонок"
+  },
+  "market": {
+    "hero": {
+      "all": "Все",
+      "search": "Поиск...",
+      "favorite": "Избранное",
+      "shop": "Корзина"
+    }
+  },
+  "configure": {
+    "title": "КОНФИГУРАТОР ПК",
+    "desc": "Сборка компьютера, о котором вы мечтали. Вы можете изменить комплектацию представ-ленных на сайте сборок, узнать цену онлайн, сравнить характеристики. Оформите заказ и получите готовый Кейс.",
+    "btnPay": "Купить"
+  }
 }
