--- a/src/language/ru.json
+++ b/src/language/ru.json
@@ -53,5 +53,22 @@
     "title": "КОНФИГУРАТОР ПК",
     "desc": "Сборка компьютера, о котором вы мечтали. Вы можете изменить комплектацию представ-ленных на сайте сборок, узнать цену онлайн, сравнить характеристики. Оформите заказ и получите готовый Кейс.",
     "btnPay": "Купить"
+  },
+  "about": {
+    "title": "Bizning vazifamiz",
+    "desc": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis a blanditiis aspernatur perspiciatis commodi quisquam distinctio animi atque obcaecati rerum incidunt, illum, nostrum minima dolorem, amet dolores eius corporis expedita quidem natus architecto mollitia! Rerum quos ea harum sit vel.",
+    "leaders": "Познакомьтесь с нашими лидерами",
+    "leadersDesc": "Lorem ipsum dolor sit, amet consectetur adipisicing elit.",
+    "leadersBtn": "Посмотреть других лидеров"
+  },
+  "contact": {
+    "title": "Связаться",
+    "desc": "Напишите нам, и мы обязательно это рассмотрим!",
+    "name": "Ваше имя",
+    "email": "Электронная почта",
+    "message": "Сообщение",
+    "btn": "Отправить",
+    "contactUs": "Cвязаться с нами",
+    "address": "Торговый центр Универсам, Tashkent 100037, Узбекистан"
   }
 }
