fix: translate text

--- a/src/language/ru.json
+++ b/src/language/ru.json
@@ -69,5 +69,8 @@
     "btn": "Отправить",
     "contactUs": "Cвязаться с нами",
     "address": "Торговый центр Универсам, Tashkent 100037, Узбекистан"
-  }
+  },
+  "register" : "Регистрация",
+  "exit": "Вход",
+  "all" : "Общий"
 }
